--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <h1><strong>CityAnchor: City-scale 3D Visual Grounding with Multi-modality LLMs</strong>
     </h1>
     <p id="authors">
-      <span class="conference">XXXX 2024</span> <br>
+      <span class="conference">ICLR 2025</span> <br>
       <span>
         <a <sup>1,*</sup></a>
       </span>
@@ -58,7 +58,7 @@
     </p>
     <font size="+2">
       <p style="text-align: center;">
-        <a href="https://github.com/Lijp411/CityAnchor" target="_blank">[Code]</a>
+        <a href="https://github.com/WHU-USI3DV/CityAnchor" target="_blank">[Code]</a>
       </p>
     </font>
 
@@ -74,7 +74,7 @@
     
     <h2 style="text-align:center;">Please stay tuned for our <strong>CityAnchor</strong>!</h2>
 
-    <img src="./freereg/teaser_2.png" class="teaser-gif" style="width:100%;"><br>
+    <img src="./CityAnchorFig/Teaser.png" class="teaser-gif" style="width:100%;"><br>
     <a style="text-align:center">
       <p>We present CityAnchor, <strong>a multi-modality LLM</strong>, that can accurately localize a target in a city-scale point cloud from some text descriptions of the target. 
       CityAnchor achieves this by extracting features from the point cloud to grasp the intricate attributes and spatial relationships of urban objects. 
@@ -205,7 +205,7 @@
   <div class="content">
     <h2>City-scale Grounding Results</h2>
 
-    <img class="summary-img" src="./freereg/CityRefer_Fig_paper.png" style="width:100%;">
+    <img class="summary-img" src="./CityAnchorFig/Results.png" style="width:100%;">
     <p>
       Qualitative grounding results on the CityRefer dataset. 
       The projected 2D map is obtained from the city-scale point cloud by top-view projection. 
@@ -218,7 +218,7 @@
     <h3>
       <center>Compare to baseline method CityRefer</center>
     </h3>
-    <img class="summary-img" src="./freereg/Appendix_compare_baseline.png" style="width:100%;">
+    <img class="summary-img" src="./CityAnchorFig/Appendix_compare_baseline.png" style="width:100%;">
     <p>
       Qualitative comparisons of the baseline method CityRefer and the proposed framework CityAnchor. The ground truth and predicted boxes are displayed in green and red, respectively. 
       Although both our CityAnchor and the baseline method CityRefer are capable of understanding simple textual descriptions (e.g., white house, blue car, etc.), 
