--- a/index.html
+++ b/index.html
@@ -47,8 +47,13 @@
     <p id="authors">
       <span class="conference">ICLR 2025</span> <br>
       <span>
-        <a <sup>1,*</sup></a>
+        <a Jinpeng Li<sup>1,*</sup></a>
       </span>
+      
+      <span>
+        <a Haiping Wang<sup>1,*</sup></a>
+      </span>
+      
       <br>
       <span class="institution">
         <a href="https://en.whu.edu.cn/"><sup>1</sup> Wuhan University</a> 
