--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
       <span>
         <a Jinpeng Li<sup>1,*</sup></a>
       </span>
-      
       <span>
         <a Haiping Wang<sup>1,*</sup></a>
+      </span>
+      <span>
+        <a Jiabin Chen<sup>1</sup></a>
       </span>
       
       <br>
