--- a/index.html
+++ b/index.html
@@ -46,17 +46,39 @@
     </h1>
     <p id="authors">
       <span class="conference">ICLR 2025</span> <br>
-      <span>Jinpeng Li<sup>1,*</sup></span>
-      <span>Haiping Wang<sup>1,*</sup></span>
-      <span>Jiabin Chen<sup>1</sup></span>
-      <span>Yuan Liu<sup>2,&dagger;</sup></span>
-      <span>Zhiyang Dou<sup>3</sup></span>
-      <span>Yuexin Ma<sup>4</sup></span>
-      <span>Sibei Yang<sup>4</sup></span>
-      <span>Yuan Li<sup>5</sup></span>
-      <span>Wenping Wang<sup>6</sup></span>
-      <span>Zhen Dong<sup>1</sup></span>
-      <span>Bisheng Yang<sup>1,&dagger;</sup></span>
+      <span>
+        Jinpeng Li<sup>1,*</sup>
+      </span>
+      <span>
+        Haiping Wang<sup>1,*</sup>
+      </span>
+      <span>
+        Jiabin Chen<sup>1</sup>
+      </span>
+      <span>
+        Yuan Liu<sup>2,&dagger;</sup>
+      </span>
+      <span>
+        Zhiyang Dou<sup>3</sup>
+      </span>
+      <span>
+        Yuexin Ma<sup>4</sup>
+      </span>
+      <span>
+        Sibei Yang<sup>4</sup>
+      </span>
+      <span>
+        Yuan Li<sup>5</sup>
+      </span>
+      <span>
+        Wenping Wang<sup>6</sup>
+      </span>
+      <span>
+        Zhen Dong<sup>1</sup>
+      </span>
+      <span>
+        Bisheng Yang<sup>1,&dagger;</sup>
+      </span>
       
       <br>
       <span class="institution">
