--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         Jiabin Chen<sup>1</sup>
       </span>
       <span>
-        Yuan Liu<sup>2,&dagger;</sup>
+        Yuan Liu<sup>2,&dagger;</sup>  <br>
       </span>
       <span>
         Zhiyang Dou<sup>3</sup>
@@ -68,7 +68,7 @@
         Sibei Yang<sup>4</sup>
       </span>
       <span>
-        Yuan Li<sup>5</sup>
+        Yuan Li<sup>5</sup>  <br>
       </span>
       <span>
         Wenping Wang<sup>6</sup>
