--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         Jiabin Chen<sup>1</sup>
       </span>
       <span>
-        Yuan Liu<sup>2,&dagger;</sup>  <br>
-      </span>
+        Yuan Liu<sup>2,&dagger;</sup>
+      </span> <br>
       <span>
         Zhiyang Dou<sup>3</sup>
       </span>
@@ -68,8 +68,8 @@
         Sibei Yang<sup>4</sup>
       </span>
       <span>
-        Yuan Li<sup>5</sup>  <br>
-      </span>
+        Yuan Li<sup>5</sup>
+      </span> <br>
       <span>
         Wenping Wang<sup>6</sup>
       </span>
