--- a/index.html
+++ b/index.html
@@ -38,13 +38,6 @@
     }
   </style>
   <style>
-  #authors {
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    gap: 10px 30px;
-    font-size: 16px;
-    text-align: left;
-  }
   #authors span {
     white-space: nowrap;
   }
@@ -57,15 +50,15 @@
     <h1><strong>CityAnchor: City-scale 3D Visual Grounding with Multi-modality LLMs</strong>
     </h1>
     <p id="authors">
-      <span class="conference">ICLR 2025</span>
+      <span class="conference">ICLR 2025</span> <br>
       <span>Jinpeng Li<sup>1,*</sup></span>
       <span>Haiping Wang<sup>1,*</sup></span>
       <span>Jiabin Chen<sup>1</sup></span>
-      <span>Yuan Liu<sup>2,&dagger;</sup></span>
+      <span>Yuan Liu<sup>2,&dagger;</sup></span> <br>
       <span>Zhiyang Dou<sup>3</sup></span>
       <span>Yuexin Ma<sup>4</sup></span>
       <span>Sibei Yang<sup>4</sup></span>
-      <span>Yuan Li<sup>5</sup></span>
+      <span>Yuan Li<sup>5</sup></span> <br>
       <span>Wenping Wang<sup>6</sup></span>
       <span>Zhen Dong<sup>1</sup></span>
       <span>Bisheng Yang<sup>1,&dagger;</sup></span>
@@ -85,7 +78,9 @@
     </p>
     <font size="+2">
       <p style="text-align: center;">
+        <a href="https://openreview.net/forum?id=7nOl5W6xU4" target="_blank">[Paper]</a> &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://github.com/WHU-USI3DV/CityAnchor" target="_blank">[Code]</a>
+        <a href="freereg/bibtex.txt" target="_blank">[BibTeX]</a>
       </p>
     </font>
 
