--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
       <span>Jinpeng Li<sup>1,*</sup></span>
       <span>Haiping Wang<sup>1,*</sup></span>
       <span>Jiabin Chen<sup>1</sup></span>
-      <span>Yuan Liu<sup>2,&dagger;</sup></span> <br>
+      <span>Yuan Liu<sup>2,&dagger;</sup></span>
       <span>Zhiyang Dou<sup>3</sup></span>
-      <span>Yuexin Ma<sup>4</sup></span>
+      <span>Yuexin Ma<sup>4</sup></span> <br>
       <span>Sibei Yang<sup>4</sup></span>
       <span>Yuan Li<sup>5</sup></span> <br>
       <span>Wenping Wang<sup>6</sup></span>
@@ -68,7 +68,7 @@
       <span class="institution">
         <a href="https://en.whu.edu.cn/"><sup>1</sup> Wuhan University</a> 
         <a href="https://hkust.edu.hk/"><sup>2</sup> Hong Kong University of Science and Technology</a> 
-        <a href="https://www.upenn.edu/"><sup>3</sup> University of Pennsylvania</a> 
+        <a href="https://www.upenn.edu/"><sup>3</sup> University of Pennsylvania</a>  <br>
         <a href="https://www.shanghaitech.edu.cn/"><sup>4</sup> ShanghaiTech University</a> 
         <a href="https://www.sysu.edu.cn/"><sup>5</sup> Sun Yat-Sen University</a> 
         <a href="https://www.tamu.edu/index.html"><sup>6</sup> Texas A&M University</a></span>  
