--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </p>
     <font size="+2">
       <p style="text-align: center;">
-        <a href="https://openreview.net/forum?id=7nOl5W6xU4" target="_blank">[Paper]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://openreview.net/forum?id=7nOl5W6xU4" target="_blank">[Paper]</a>
         <a href="https://github.com/WHU-USI3DV/CityAnchor" target="_blank">[Code]</a>
         <a href="freereg/bibtex.txt" target="_blank">[BibTeX]</a>
       </p>
@@ -237,9 +237,9 @@
       Grounding results are shown in red boxes.
       </p>
     
-    <h3>
-      <center>Compare to baseline method CityRefer</center>
-    </h3>
+    <h2>
+      <center>Compare to Baseline Method CityRefer</center>
+    </h2>
     <img class="summary-img" src="./CityAnchorFig/Appendix_compare_baseline.png" style="width:100%;">
     <p>
       Qualitative comparisons of the baseline method CityRefer and the proposed framework CityAnchor. The ground truth and predicted boxes are displayed in green and red, respectively. 
