--- a/index.html
+++ b/index.html
@@ -43,6 +43,22 @@
   }
 </style>
   
+  <style>
+  .institution-container {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: 10px 30px;
+    justify-content: center;
+    text-align: center;
+    margin-top: 10px;
+  }
+  .institution-container a {
+    text-decoration: none;
+    color: #000;
+    font-size: 14px;
+  }
+</style>
+  
 </head>
 
 <body>
@@ -58,7 +74,7 @@
       <span>Zhiyang Dou<sup>3</sup></span>
       <span>Yuexin Ma<sup>4</sup></span> <br>
       <span>Sibei Yang<sup>4</sup></span>
-      <span>Yuan Li<sup>5</sup></span> <br>
+      <span>Yuan Li<sup>5</sup></span>
       <span>Wenping Wang<sup>6</sup></span>
       <span>Zhen Dong<sup>1</sup></span>
       <span>Bisheng Yang<sup>1,&dagger;</sup></span>
@@ -66,12 +82,13 @@
       
       <br>
       <span class="institution">
-        <a href="https://en.whu.edu.cn/"><sup>1</sup> Wuhan University</a> 
-        <a href="https://hkust.edu.hk/"><sup>2</sup> Hong Kong University of Science and Technology</a> 
-        <a href="https://www.upenn.edu/"><sup>3</sup> University of Pennsylvania</a>  <br>
-        <a href="https://www.shanghaitech.edu.cn/"><sup>4</sup> ShanghaiTech University</a> 
-        <a href="https://www.sysu.edu.cn/"><sup>5</sup> Sun Yat-Sen University</a> 
-        <a href="https://www.tamu.edu/index.html"><sup>6</sup> Texas A&M University</a></span>  
+        <a href="https://en.whu.edu.cn/"><sup>1</sup> Wuhan University</a>
+        <a href="https://hkust.edu.hk/"><sup>2</sup> Hong Kong University of Science and Technology</a>
+        <a href="https://www.upenn.edu/"><sup>3</sup> University of Pennsylvania</a>
+        <br>
+        <a href="https://www.shanghaitech.edu.cn/"><sup>4</sup> ShanghaiTech University</a>
+        <a href="https://www.sysu.edu.cn/"><sup>5</sup> Sun Yat-Sen University</a>
+        <a href="https://www.tamu.edu/index.html"><sup>6</sup> Texas A&M University</a>
         
         <sup>*</sup>The first two authors contribute equally. &nbsp;&nbsp; 
         <sup>&dagger;</sup>Corresponding authors. &nbsp;&nbsp; 
