--- a/index.html
+++ b/index.html
@@ -43,22 +43,6 @@
   }
 </style>
   
-  <style>
-  .institution-container {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    gap: 10px 30px;
-    justify-content: center;
-    text-align: center;
-    margin-top: 10px;
-  }
-  .institution-container a {
-    text-decoration: none;
-    color: #000;
-    font-size: 14px;
-  }
-</style>
-  
 </head>
 
 <body>
@@ -79,17 +63,15 @@
       <span>Zhen Dong<sup>1</sup></span>
       <span>Bisheng Yang<sup>1,&dagger;</sup></span>
     </p>
-      
+
       <br>
       <span class="institution">
-        <span><a href="https://en.whu.edu.cn/"><sup>1</sup> Wuhan University</a></span>
-        <span><a href="https://hkust.edu.hk/"><sup>2</sup> Hong Kong University of Science and Technology</a></span>
-        <span><a href="https://www.upenn.edu/"><sup>3</sup> University of Pennsylvania</a></span>
-        <br>
-        <span><a href="https://www.shanghaitech.edu.cn/"><sup>4</sup> ShanghaiTech University</a></span>
-        <span><a href="https://www.sysu.edu.cn/"><sup>5</sup> Sun Yat-Sen University</a></span>
-        <span><a href="https://www.tamu.edu/index.html"><sup>6</sup> Texas A&M University</a></span>
-        
+        <a href="https://en.whu.edu.cn/"><sup>1</sup> Wuhan University</a>
+        <a href="https://hkust.edu.hk/"><sup>2</sup> Hong Kong University of Science and Technology</a>
+        <a href="https://www.upenn.edu/"><sup>3</sup> University of Pennsylvania</a>
+        <a href="https://www.shanghaitech.edu.cn/"><sup>4</sup> ShanghaiTech University</a>
+        <a href="https://www.sysu.edu.cn/"><sup>5</sup> Sun Yat-Sen University</a>
+        <a href="https://www.tamu.edu/index.html"><sup>6</sup> Texas A&M University</a>
         <sup>*</sup>The first two authors contribute equally. &nbsp;&nbsp; 
         <sup>&dagger;</sup>Corresponding authors. &nbsp;&nbsp; 
     </p>
