--- a/index.html
+++ b/index.html
@@ -65,17 +65,18 @@
 
       <br>
       <span class="institution">
-        <center>
-          <p>
-          <a href="https://en.whu.edu.cn/"><sup>1</sup> Wuhan University</a>
-          <a href="https://hkust.edu.hk/"><sup>2</sup> Hong Kong University of Science and Technology</a>
-          <a href="https://www.upenn.edu/"><sup>3</sup> University of Pennsylvania</a> <br>
-
-          <a href="https://www.shanghaitech.edu.cn/"><sup>4</sup> ShanghaiTech University</a>
-          <a href="https://www.sysu.edu.cn/"><sup>5</sup> Sun Yat-Sen University</a>
-          <a href="https://www.tamu.edu/index.html"><sup>6</sup> Texas A&M University</a>
-          </p>
-        </center>
+        <table align="center">
+        <tr>
+        <td><a href="https://en.whu.edu.cn/"><sup>1</sup> Wuhan University</a></td>
+        <td><a href="https://hkust.edu.hk/"><sup>2</sup> Hong Kong University of Science and Technology</a></td>
+        <td><a href="https://www.upenn.edu/"><sup>3</sup> University of Pennsylvania</a></td>
+        </tr>
+        <tr>
+        <td><a href="https://www.shanghaitech.edu.cn/"><sup>4</sup> ShanghaiTech University</a></td>
+        <td><a href="https://www.sysu.edu.cn/"><sup>5</sup> Sun Yat-Sen University</a></td>
+        <td><a href="https://www.tamu.edu/index.html"><sup>6</sup> Texas A&M University</a></td>
+        </tr>
+        </table>
         <sup>*</sup>The first two authors contribute equally. &nbsp;&nbsp; 
         <sup>&dagger;</sup>Corresponding authors. &nbsp;&nbsp; 
     </p>
