--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
       <span class="institution">
         <table align="center">
         <tr>
-        <td><a href="https://en.whu.edu.cn/"><sup>1</sup> Wuhan University</a></td>
-        <td><a href="https://hkust.edu.hk/"><sup>2</sup> Hong Kong University of Science and Technology</a></td>
-        <td><a href="https://www.upenn.edu/"><sup>3</sup> University of Pennsylvania</a></td>
+        <td align="center"><a href="https://en.whu.edu.cn/"><sup>1</sup> Wuhan University</a></td>
+        <td align="center"><a href="https://hkust.edu.hk/"><sup>2</sup> Hong Kong University of Science and Technology</a></td>
+        <td align="center"><a href="https://www.upenn.edu/"><sup>3</sup> University of Pennsylvania</a></td>
         </tr>
         <tr>
-        <td><a href="https://www.shanghaitech.edu.cn/"><sup>4</sup> ShanghaiTech University</a></td>
-        <td><a href="https://www.sysu.edu.cn/"><sup>5</sup> Sun Yat-Sen University</a></td>
-        <td><a href="https://www.tamu.edu/index.html"><sup>6</sup> Texas A&M University</a></td>
+        <td align="center"><a href="https://www.shanghaitech.edu.cn/"><sup>4</sup> ShanghaiTech University</a></td>
+        <td align="center"><a href="https://www.sysu.edu.cn/"><sup>5</sup> Sun Yat-Sen University</a></td>
+        <td align="center"><a href="https://www.tamu.edu/index.html"><sup>6</sup> Texas A&M University</a></td>
         </tr>
         </table>
         <sup>*</sup>The first two authors contribute equally. &nbsp;&nbsp; 
